punches fixed on safari

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -878,7 +878,6 @@ this is so hamburger menu does not show for safari*/
 		border-spacing: 0;
 		/* border-radius: 100%; */
 		box-shadow: var(--shadow);
-		
 	}
 	.rounded-table, .schedule-table.no-color {
 		background: #0000;
@@ -1034,9 +1033,10 @@ this is so hamburger menu does not show for safari*/
 	#punches td {
 		padding: var(--pad-small);
 		background: var(--orange-glass-less);
-		&:not(:first-child):not(:last-child) {
-			width: 48px;
-		}
+		
+	}
+	#punches td:not(:first-child):not(:last-child) {
+		width: 48px;
 	}
 	#punches .title {
 		padding-left: var(--pad-big);
@@ -1135,6 +1135,19 @@ this is so hamburger menu does not show for safari*/
 			background-color: var(--dark-peach);
 			margin: 0px;
 		}
+
+		/*punches */
+		#punches td{
+			padding: 0.1em;
+		}
+		#punches .title{
+			padding-left: var(--pad-small);
+		}
+		#punches .punch{
+			width: 30px;
+			height: 30px;
+		}
+
     }
 }
 /*End Safari Filter*/
